Lint and Formatted Team 4 Activity

--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -14,9 +14,7 @@
   </head>
 
   <body>
-    <header class="divider" id="main-header">
-
-    </header>
+    <header class="divider" id="main-header"></header>
 
     <main class="divider">
       <section class="product-detail">
@@ -33,8 +31,6 @@
       </section>
     </main>
 
-    <footer id="main-footer">
-
-    </footer>
+    <footer id="main-footer"></footer>
   </body>
 </html>
