--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -14,9 +14,7 @@
   </head>
 
   <body>
-    <header class="divider" id="main-header">
-
-    </header>
+    <header class="divider" id="main-header"></header>
 
     <main class="divider">
       <section class="products">
@@ -31,8 +29,6 @@
       </section>
     </main>
 
-    <footer id="main-footer">
-
-    </footer>
+    <footer id="main-footer"></footer>
   </body>
 </html>
