--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -13,9 +13,7 @@
   </head>
 
   <body>
-    <header class="divider" id="main-header">
-
-    </header>
+    <header class="divider" id="main-header"></header>
 
     <main class="divider">
       <section class="products">
@@ -23,8 +21,6 @@
       </section>
     </main>
 
-    <footer id="main-footer">
-
-    </footer>
+    <footer id="main-footer"></footer>
   </body>
 </html>
