--- a/src/product-list/index.html
+++ b/src/product-list/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Sleep Outside | Products</title>
     <link rel="stylesheet" href="/css/style.css" />
     <script src="/js/product-list.js" type="module"></script>
   </head>
