H2 added to product-list

--- a/src/product-list/index.html
+++ b/src/product-list/index.html
@@ -48,6 +48,7 @@
           <figcaption>Hammock</figcaption>
         </figure>
       </div>
+      <h2>Top Products</h2>
       <ul class="product-list">
         <!-- dynamically generated from productList.mjs -->
       </ul>
