Initial pass - Bug submitting form to server

--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -25,6 +25,7 @@
         </ul>
         <div class="cart-footer">
           <p class="cart-total">Total:</p>
+          <button><a href="/checkout/index.html">Checkout</a></button>
         </div>
       </section>
     </main>
