--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -3,12 +3,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Sleep Outside | Checkout</title>
-
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <script src="../js/checkout.js" type="module"></script>
   </head>
 
@@ -16,8 +13,58 @@
     <header class="divider" id="main-header"></header>
 
     <main class="divider">
-      <section class="products">
+      <section class="checkout">
         <h2>Review & Place your Order</h2>
+        <form name="checkout">
+          <fieldset>
+            <legend>Shipping</legend>
+            <div class="checkout__name">
+              <label for="fname">First Name</label>
+              <input name="fname" required />
+              <label for="lname">Last Name</label>
+              <input name="lname" required />
+            </div>
+            <div class="checkout__address">
+              <label for="street">Street</label>
+              <input name="street" required />
+              <label for="city">City</label>
+              <input name="city" required />
+              <label for="state">State</label>
+              <input name="state" required />
+              <label for="zip">Zip</label>
+              <input name="zip" id="zip" required />
+            </div>
+          </fieldset>
+          <fieldset>
+            <legend>Payment</legend>
+            <label for="cardNumber">Card number</label>
+            <input name="cardNumber" required />
+            <label for="expiration">Expiration</label>
+            <input name="expiration" required />
+            <label for="code">Security Code</label>
+            <input name="code" required />
+          </fieldset>
+          <fieldset>
+            <legend>Order Summary</legend>
+            <div class="order-summary">
+              <p id="subtotal">Item Subtotal(<span id="item-count"></span>)</p>
+              <p id="subtotal-cost"></p>
+            </div>
+            <div class="order-summary">
+              <p id="shipping">Shipping Estimate</p>
+              <p id="shipping-cost"></p>
+            </div>
+            <div class="order-summary">
+              <p id="tax">Tax</p>
+              <p id="tax-cost"></p>
+            </div>
+            <div class="order-summary">
+              <p id="total">Order Total</p>
+              <p id="total-cost"></p>
+            </div>
+          </fieldset>
+          <button id="checkoutSubmit" type="submit">Checkout</button>
+        </form>
       </section>
     </main>
 
