Added more Styling to product-list and cart

--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -25,7 +25,9 @@
         </ul>
         <div class="cart-footer">
           <p class="cart-total">Total:</p>
-          <button><a href="/checkout/index.html">Checkout</a></button>
+          <button id="checkout-button">
+            <a href="/checkout/index.html">Checkout</a>
+          </button>
         </div>
       </section>
     </main>
