--- a/src/checkout/success.html
+++ b/src/checkout/success.html
@@ -13,11 +13,13 @@
     <header class="divider" id="main-header"></header>
 
     <main class="divider">
-        <div id="success-card">
-            <div id="success-icon">✔️</div>
-            <p id="success-message">Thank you! Your order has been placed successfully.</p>
-            <a id="continue-btn" href="/">Continue Shopping</a>
-        </div>
+      <div id="success-card">
+        <div id="success-icon">✔️</div>
+        <p id="success-message">
+          Thank you! Your order has been placed successfully.
+        </p>
+        <a id="continue-btn" href="/">Continue Shopping</a>
+      </div>
     </main>
 
     <footer id="main-footer"></footer>
